// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz cCCoTD"
  >
    <div
      class="sc-bdfBwQ ezQfOm"
    />
  </div>
</div>
`;

exports[`Loader component should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz lfYWDd"
  >
    <div
      class="sc-bdfBwQ ezQfOm"
    />
  </div>
</div>
`;

exports[`Loader component should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz jvGeOg"
  >
    <div
      class="sc-bdfBwQ ezQfOm"
    />
  </div>
</div>
`;
